automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,26 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2800000"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-f88c1c0b0b5a>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-f88c1c0b0b5a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for i in (list(range(0, len(cities))):\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "city_populations = []\n",
     "\n",
-    "#for i in (list(range(0, len(cities))):\n",
-    "    #city_populations.append(cities[i][\"Population\"])\n",
-    "cities[1][\"Population\"]     "
+    "for i in (list(range(0, len(cities))):\n",
+    "    city_populations.append(cities[i][\"Population\"])\n",
+    "#cities[1][\"Population\"]     "
    ]
   },
   {
