--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
    "source": [
     "city_populations = []\n",
     "\n",
-    "for i in (list(range(0, len(cities))):\n",
+    "for i in list(range(0, len(cities))):\n",
     "    city_populations.append(cities[i][\"Population\"])\n",
     "#cities[1][\"Population\"]     "
    ]
