--- a/index.ipynb
+++ b/index.ipynb
@@ -275,15 +275,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2800000"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_populations = []\n",
     "\n",
     "for i in list(range(0, len(cities))):\n",
     "    city_populations.append(cities[i][\"Population\"])\n",
-    "#cities[1][\"Population\"]     "
+    "cities[1][\"Population\"]     "
    ]
   },
   {
