--- a/index.ipynb
+++ b/index.ipynb
@@ -310,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2891000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
    "source": [
     "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
-    "city_populations[-1] # 0"
+    "#city_populations[-1] # 0"
    ]
   },
   {
