--- a/index.ipynb
+++ b/index.ipynb
@@ -310,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2800000"
+       "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
    "source": [
     "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
-    "#city_populations[-1] # 0"
+    "city_populations[-1] # 0"
    ]
   },
   {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
