--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = []\n",
+    "\n",
+    "for i in city"
    ]
   },
   {
