--- a/index.ipynb
+++ b/index.ipynb
@@ -452,7 +452,8 @@
    "source": [
     "city_areas = []\n",
     "\n",
-    "for i in city"
+    "#for i in city_indices:\n",
+    "\n"
    ]
   },
   {
