--- a/index.ipynb
+++ b/index.ipynb
@@ -446,14 +446,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_areas = []\n",
     "\n",
-    "#for i in city_indices:\n",
-    "\n"
+    "for i in city_indices:\n",
+    "\n",
+    "city_indices"
    ]
   },
   {
