--- a/index.ipynb
+++ b/index.ipynb
@@ -464,6 +464,7 @@
     "city_areas = []\n",
     "\n",
     "for i in city_indices:\n",
+    "    city_areas.append()\n",
     "\n",
     "city_indices"
    ]
