automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731}"
+       "2731"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
     "#for i in city_indices:\n",
     "    #city_areas.append(f\"\")\n",
     "\n",
-    "cities[1][\"A\"]\n"
+    "cities[1][\"Area\"]\n"
    ]
   },
   {
