--- a/index.ipynb
+++ b/index.ipynb
@@ -446,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2731"
+       "int"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
     "#for i in city_indices:\n",
     "    #city_areas.append(f\"\")\n",
     "\n",
-    "cities[1][\"Area\"]\n"
+    "type(cities[1][\"Area\"])\n"
    ]
   },
   {
