--- a/index.ipynb
+++ b/index.ipynb
@@ -446,16 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-28-4d546fd35c66>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-4d546fd35c66>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    type(f\"cities[1][\"Area\"]\")\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -464,7 +466,7 @@
     "#for i in city_indices:\n",
     "    #city_areas.append(f\"\")\n",
     "\n",
-    "type(f\"cities[1][\"Area\"]\")\n"
+    "type()\n"
    ]
   },
   {
