automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "[]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,9 +464,9 @@
     "city_areas = []\n",
     "\n",
     "#for i in city_indices:\n",
-    "    #city_areas.append(f\"\")\n",
-    "\n",
-    "type()\n"
+    "    #city_areas.append(cities[1][\"Area\"])\n",
+    "city_areas\n",
+    "\n"
    ]
   },
   {
