automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -446,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[2731, 2731, 2731, 2731, 2731, 2731, 2731, 2731, 2731, 2731, 2731, 2731]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,8 +463,8 @@
    "source": [
     "city_areas = []\n",
     "\n",
-    "#for i in city_indices:\n",
-    "    #city_areas.append(cities[1][\"Area\"])\n",
+    "for i in city_indices:\n",
+    "    city_areas.append(cities[1][\"Area\"])\n",
     "city_areas\n",
     "\n"
    ]
